--- a/suhendar-UAS-Desktop-2019/src/suhendar/uas/desktop/pkg2019/Homepage.form
+++ b/suhendar-UAS-Desktop-2019/src/suhendar/uas/desktop/pkg2019/Homepage.form
@@ -13,11 +13,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Input Transaksi"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Logout"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem3ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
